force-app/main/default/objects/ServiceContract/fields/Client_Signer__c.field-meta.xml
<CustomField>
    <fullName>Client_Signer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contacto del cliente que firma el contrato legal.</description>
    <label>Firmante del Cliente</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contratos Firmados</relationshipLabel>
    <relationshipName>SignedServiceContracts</relationshipName>
    <type>Lookup</type>
</CustomField>