force-app/main/default/objects/ServiceContract/fields/Contract_Creator__c.field-meta.xml
<CustomField>
    <fullName>Contract_Creator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Usuario responsable de la creación del contrato.</description>
    <label>Creado por (Responsable)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CreatedServiceContracts</relationshipName>
    <type>Lookup</type>
</CustomField>