force-app/main/default/objects/ServiceContract/fields/Contract_Manager__c.field-meta.xml
<CustomField>
    <fullName>Contract_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Usuario responsable de la gestión comercial del contrato.</description>
    <label>Gestionado por</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ManagedServiceContracts</relationshipName>
    <type>Lookup</type>
</CustomField>