force-app/main/default/objects/ServiceContract/fields/First_Service_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Service_Date__c</fullName>
    <description>Fecha programada para la primera ejecución del servicio.</description>
    <label>Fecha Primer Servicio</label>
    <type>Date</type>
</CustomField>