force-app/main/default/objects/ServiceContract/fields/Legal_Content__c.field-meta.xml
<CustomField>
    <fullName>Legal_Content__c</fullName>
    <description>Cuerpo legal completo y editado del contrato.</description>
    <label>Contenido Legal</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>