force-app/main/default/objects/ServiceContract/fields/Private_Observations__c.field-meta.xml
<CustomField>
    <fullName>Private_Observations__c</fullName>
    <description>Observaciones internas y privadas del contrato.</description>
    <label>Observaciones Privadas</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>