force-app/main/default/objects/ServiceContract/fields/Quote_Source__c.field-meta.xml
<CustomField>
    <fullName>Quote_Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Presupuesto origen que generó este contrato de servicio.</description>
    <label>Presupuesto Origen</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Contratos de Servicio</relationshipLabel>
    <relationshipName>ServiceContracts</relationshipName>
    <required>false</externalId>
    <type>Lookup</type>
</CustomField>