force-app/main/default/objects/ServiceContract/fields/Renewal_Observations__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Observations__c</fullName>
    <description>Observaciones específicas para el proceso de renovación.</description>
    <label>Observaciones de Renovación</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>