force-app/main/default/objects/ServiceContract/fields/Service_Limit_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_Limit_Date__c</fullName>
    <description>Fecha límite establecida para la prestación de los servicios contratados.</description>
    <label>Fecha Límite Servicio</label>
    <type>Date</type>
</CustomField>