force-app/main/default/objects/ServiceContract/listViews/All_ServiceContracts.listView-meta.xml
<ListView>
    <fullName>All_ServiceContracts</fullName>
    <columns>CONTRACT.NAME</columns>
    <columns>CONTRACT.APPROVALSTATUS</columns>
    <columns>CONTRACT.STARTDATE</columns>
    <columns>CONTRACT.ENDDATE</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>ACCOUNT.NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Todos los Contratos de servicio</label>
</ListView>